<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Here is more information</string>
    <string name="enter_email_message">Enter Your Email Address:</string>
    <string name="enter_password_message">Enter Your Password:</string>
    <string name="profile_message">Your Profile:</string>
    <string name="name_message">Your Name:</string>
    <string name="email_message">Your Email:</string>
    <string name="picture_message">Your Picture:</string>
    <string name="picture_click_message">Click the button above to take a picture</string>
    <string name="receiveButton">Receive</string>
    <string name="messageTypeArea">Type here</string>
    <string name="sendButton">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choice1">First Choice</string>
    <string name="choice2">Second Choice</string>
    <string name="choice3">Third Choice</string>
</resources>