<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:focusableInTouchMode="true">

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/messages_list"
        android:layout_weight="2"

        android:layout_height="wrap_content"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/messageSendButton"
            android:text="@string/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/messageTypeArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/messageTypeArea"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:text="" />

        <Button
            android:id="@+id/messageReceiveButton"
            android:text="@string/receiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_marginHorizontal="5dp"/>
    </LinearLayout>
</LinearLayout>